--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -89,8 +89,8 @@ block main
   
 
     style.
-        .intu-title {
-            text-shadow: 1px 1px 0px #ffffff;
+        .hero-image {
+            text-shadow: .5px .5px 0px #000;
         }
      
         .hero-image {
@@ -98,8 +98,10 @@ block main
             background-repeat: no-repeat;
             background-position: bottom;
             background-size: cover;
+            background-attachment: fixed;
+
             margin: 0;
-            padding: 16rem 2rem;
+            padding: 14rem 2rem;
             color: white;
             position: relative;
             border-radius: 0;
