--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -22,7 +22,7 @@ block main
         br
         .container
             .col-md-12
-                h4
+                h5
                     include:metaMD  /text/approach.md
                 p
                 br
@@ -36,7 +36,7 @@ block main
                     .col-md-12
                         h1 What if users could maintain and build future versions?
                         p Version 1.0 spec is followed by next version - majority of effort is after 1.0 release!
-                        img(src="iterative.png"  loading="lazy").rounded.mt-3.img-fluid
+                        img(data-src="iterative.png").rounded.mt-3.img-fluid.lazyload
 
                 .col-md-12
                     include:metaMD  /text/easy.md
@@ -75,7 +75,7 @@ block main
                                                 p.card-text.mb-auto Building  a simple CRUD application, and leverage built in user authentication.
                                                 a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank').mt-3 Read More
                                         .col-md-4.col-xs-12
-                                            img.card-img-right(src='books.jpg' loading="lazy").img-fluid.mx-auto.d-block
+                                            img.card-img-right(data-src='books.jpg' ).img-fluid.mx-auto.d-block.lazyload
                             .col-md-6
                                 .card.mb-3
                                     .row.no-gutters
@@ -85,7 +85,7 @@ block main
                                                 p.card-text Use exactly the same code for WebApp, IOS and Andorid
                                                 a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/mobile', target='_blank').mt-3 Read More
                                         .col-md-4.col-xs-12
-                                            img(src='phone.jpg' loading="lazy" ).img-fluid.mx-auto.d-block
+                                            img(data-src='phone.jpg').img-fluid.mx-auto.d-block.lazyload
   
 
     style.
@@ -97,15 +97,16 @@ block main
             background-image: url(truck1.2K.min.jpg);
             background-repeat: no-repeat;
             background-size: cover;
-            background-attachment: fixed;
-            background-position: bottom;
+            background-position: bottom center;
+
+            padding: 12rem 2rem;
 
             margin: 0;
-            padding: 15rem 2rem;
+
             color: white;
-            position: relative;
             border-radius: 0;
         }
        
+    
 
 
