--- a/site/ex/marq/index.pug
+++ b/site/ex/marq/index.pug
@@ -4,6 +4,10 @@ head
 body
    marq-custel#marq
 
+   p
+   hr
+   a(href='http://real.mbake.org') Git source code
+
    script.
       
       depp.require(['marq-custel','poly', 'poly-ani-done'], function(){ 
