--- a/site/www/assets/sass/custom.sass
+++ b/site/www/assets/sass/custom.sass
@@ -1,3 +1,10 @@
+.center 
+   display: block;
+   margin-top: 10px;
+   margin-left: auto;
+   margin-right: auto;
+   margin-bottom: 20px;
+
 .l-showcase
    list-style: none
    padding: 0
