--- a/site/www/assets/css/custom.css
+++ b/site/www/assets/css/custom.css
@@ -11,4 +11,5 @@
 .l-showcase--item:hover .l-showcase--item--img{cursor:pointer;}
 .l-showcase--item:hover .l-showcase--item--command{background:blue;color:white;}
 @media (max-width:900px){.l-showcase--item{flex-basis:46%;}}
-@media (max-width:650px){.l-showcase--item{flex-basis:100%;margin:0 0 4% 0;}} /* mB v6.09.15 on 2019-09-15T01:29:35.118Z */
+@media (max-width:650px){.l-showcase--item{flex-basis:100%;margin:0 0 4% 0;}}
+h1,h2,#brand{font-family:Montserrat;font-weight:500;} /* mB v6.09.16 on 2019-09-16T01:14:41.048Z */
