--- a/site/www/includes/navbar.pug
+++ b/site/www/includes/navbar.pug
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-lg.navbar-light
-   a.navbar-brand(href='/') INTUITION.DEV
+   a.navbar-brand#brand(href='/') INTUITION.DEV
    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarText')
       span.navbar-toggler-icon
 
