--- a/site/www/landing/low/index.pug
+++ b/site/www/landing/low/index.pug
@@ -16,7 +16,7 @@ block main
                 .row.align-items-center
                     .col-md-12.text-center
                         h1 What will the future of professional development look like?
-                        h2
+                        h2#brand
                             include:metaMD /text/motto.md
         p
         br
@@ -34,7 +34,7 @@ block main
             .container
                 .row.px-0.align-items-center.text-center
                     .col-md-12
-                        h1 What if users could maintain and build future versions?
+                        h2 What if users could maintain and build future versions?
                         p Version 1.0 spec is followed by next version - majority of effort is after 1.0 release!
                         img(data-src="iterative.png").rounded.mt-3.img-fluid.lazyload
 
