--- a/site/www/assets/sass/custom.sass
+++ b/site/www/assets/sass/custom.sass
@@ -91,3 +91,9 @@
       &--item
          flex-basis: 100%
          margin: 0 0 4% 0
+
+
+
+h1, h2, #brand
+   font-family: Montserrat;
+   font-weight: 500;
