--- a/site/www/assets/sass/custom.sass
+++ b/site/www/assets/sass/custom.sass
@@ -94,6 +94,17 @@
 
 
 
-h1, h2, #brand
-   font-family: Montserrat;
-   font-weight: 500;
+// font section loadFonts
+
+html, *
+   font-family: 'Open Sans';
+   font-weight: 300;
+
+h1, h2
+   font-family: 'PT Serif';
+   font-weight: 400;
+   font-style: italic;
+
+#brand
+   font-family: 'Open Sans';
+   font-weight: 300;
