--- a/site/www/assets/sass/custom.sass
+++ b/site/www/assets/sass/custom.sass
@@ -94,8 +94,8 @@
 
 
 
-// font section loadFonts
-
+// 6 fonts are loaded
+// loadFonts(['Open+Sans:300,300i,400', 'PT+Serif:400,400i,700i'])
 html, *
    font-family: 'Open Sans';
    font-weight: 300;
