--- a/tut/shows/one/index.pug
+++ b/tut/shows/one/index.pug
@@ -8,15 +8,22 @@ body
     .container
         p oh hi1
 
-
-
     .vidCont
         //oh hi
     .row.stretch
         .col-12.vidCont
-            p oh
-            video#v1
+            img#v1(src='who.jpg')
+            //video#v1
                 source(src="arc.mp4" type="video/mp4" autoplay)
+
+
+    section.contain
+        h1
+            | Base style + 
+            code img { object-fit: contain }
+        img(src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/apex.jpg" alt="")
+        img(src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/le-helicron.jpg" alt="")
+        h2 Images letterboxed, correct aspect ratio maintained
 
 
     .container
@@ -27,13 +34,32 @@ body
         .body {
             height: 100%;
         }
+
+    
+
+        section img {
+            wdidth: 00px;
+            hedight: 200px;
+            border: 1px solid;
+            background: #eee;
+        }
+
+        section.contain img {
+            object-fit: contain;
+        }
+
+
         
         .vidCont {
             max-height: calc(100% - 100px);
+            max-width: 100%;
             background-color: yellow;
         }
 
         #v1 {
+            width: 1600px;
+            height: 900px;
+            font-family: 'object-fit: contain;';
             object-fit: contain;
         }
 
