--- a/tut/shows/one/index.pug
+++ b/tut/shows/one/index.pug
@@ -1,86 +1,101 @@
 head
     include /layout/headFrag
 
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/dmbdesignpdx/flexr@2/flexr.min.css')
-
 body
-    p
-    .container
-        p oh hi1
 
-    .vidCont
-        //oh hi
-    .row.stretch
-        .col-12.vidCont
-            img#v1(src='who.jpg')
-            //video#v1
-                source(src="arc.mp4" type="video/mp4" autoplay)
+    #container
+        video#background_video(loop="" muted="")
+        #video_cover
+        #overlay
+        
+        section#main_content
+            h1.f1.b Animal Kingdom
+            h6 Welcome To Bideo js Test Project
 
-
-    section.contain
-        h1
-            | Base style + 
-            code img { object-fit: contain }
-        img(src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/apex.jpg" alt="")
-        img(src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/le-helicron.jpg" alt="")
-        h2 Images letterboxed, correct aspect ratio maintained
-
-
-    .container
-        p
-        p oh hi2
 
     style.
-        .body {
+        html, body {
+            width: 100%;
             height: 100%;
         }
 
-    
-
-        section img {
-            wdidth: 00px;
-            hedight: 200px;
-            border: 1px solid;
-            background: #eee;
+        #container {
+            overflow: hidden;
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
         }
 
-        section.contain img {
+        #background_video {
+            position: absolute;
+
+            top: 50%; left: 50%;
+            transform: translate(-50%, -50%);
+
             object-fit: contain;
+            height: 100%; width: 100%;
         }
 
-
-        
-        .vidCont {
-            max-height: calc(100% - 100px);
-            max-width: 100%;
-            background-color: yellow;
+        #video_cover {
+            position: absolute;
+            width: 100%; height: 100%;
+            background: url('https://vjs.zencdn.net/v/oceans.png') no-repeat;
+            background-size: cover;
+            background-position: center;
         }
 
-        #v1 {
-            width: 1600px;
-            height: 900px;
-            font-family: 'object-fit: contain;';
-            object-fit: contain;
+        #container {
+            height: 100%;
         }
+
+        #overlay {
+            position: absolute;
+            top: 0; right: 0; left: 0; bottom: 0;
+        }
+
+        #main_content {
+            z-index: 2;
+            position: relative;
+            display: inline-block;
+            text-align: center;
+            width: 100%;
+            background-color:rgba(1,1,1,0.8);
+            padding:10px 10px 50px 10px;
+            /* Vertical center */
+            top: 50%;
+            transform: translateY(-50%);
+        } 
 
     script.
-        //toolBeltDefault()
-        
-        //console.log( getStyle(document.getElementsByTagName("BODY")[0], 'line-height') )
-
         console.log('here')
 
-        depp.require(['m1ediaelement'], function() {
+        depp.require(['bideo'], function() {
             console.log('ready')
+            var bv = new Bideo()
+            bv.init({
+                // Video element
+                videoEl: document.querySelector('#background_video'),
 
-            var player = new MediaElementPlayer('v1', {
-                stretching: 'responsive',
-                success: function(mediaElement, originalNode, instance) {
-                    console.log('video ready')
+                // Container element
+                container: document.querySelector('body'),
 
+                resize: true,
+                autoplay: true,
+
+                src: [{
+                    src: 'https://vjs.zencdn.net/v/oceans.mp4',
+                    type: 'video/mp4'
+                    }],
+
+                // What to do once video loads (initial frame)
+                onLoad: function () {
+                    console.log('onLoad')
+                    document.querySelector('#video_cover').style.display = 'none';
                 }
-            })//media
+            })//()
+
 
             // baseliner = new Baseliner({gridHeight:19, gridColor: 'red'})
+            //toolBeltDefault()
+            //console.log( getStyle(document.getElementsByTagName("BODY")[0], 'line-height') )
 
         })//req
