--- a/tut/shows/one/index.pug
+++ b/tut/shows/one/index.pug
@@ -2,24 +2,20 @@ head
     include /layout/headFrag
 
 body
+    p what
 
-    #container
-        video#background_video(loop="" muted="")
-        #video_cover
-        #overlay
+    .background_video_container
+        video#background_video(loop autoplay)
         
-        section#main_content
-            h1.f1.b Animal Kingdom
-            h6 Welcome To Bideo js Test Project
-
-
+    p now
+        
     style.
         html, body {
             width: 100%;
             height: 100%;
         }
 
-        #container {
+        .background_video_container {
             overflow: hidden;
             position: absolute;
             top: 0; left: 0; right: 0; bottom: 0;
@@ -35,35 +31,10 @@ body
             height: 100%; width: 100%;
         }
 
-        #video_cover {
-            position: absolute;
-            width: 100%; height: 100%;
-            background: url('https://vjs.zencdn.net/v/oceans.png') no-repeat;
-            background-size: cover;
-            background-position: center;
-        }
-
         #container {
             height: 100%;
         }
 
-        #overlay {
-            position: absolute;
-            top: 0; right: 0; left: 0; bottom: 0;
-        }
-
-        #main_content {
-            z-index: 2;
-            position: relative;
-            display: inline-block;
-            text-align: center;
-            width: 100%;
-            background-color:rgba(1,1,1,0.8);
-            padding:10px 10px 50px 10px;
-            /* Vertical center */
-            top: 50%;
-            transform: translateY(-50%);
-        } 
 
     script.
         console.log('here')
@@ -76,20 +47,19 @@ body
                 videoEl: document.querySelector('#background_video'),
 
                 // Container element
-                container: document.querySelector('body'),
+                container: document.querySelector('#container'),
 
                 resize: true,
                 autoplay: true,
 
                 src: [{
-                    src: 'https://vjs.zencdn.net/v/oceans.mp4',
+                    src: 'arc.mp4',
                     type: 'video/mp4'
                     }],
 
                 // What to do once video loads (initial frame)
                 onLoad: function () {
                     console.log('onLoad')
-                    document.querySelector('#video_cover').style.display = 'none';
                 }
             })//()
 
