--- a/tut/shows/one/index.pug
+++ b/tut/shows/one/index.pug
@@ -19,21 +19,22 @@ body
 
         .video_container {
             display: flex;
-            overflow: hidden;
+
             height: calc(100% - 100px);
             width:  calc(100% - 100px);
-            min-width: 0;
             background: #edeae8;
+            border: 3px solid #73AD21;
         }
 
         #vid1 {
+            overflow: hidden;
             flex: 1;
             object-fit: contain;
         }
 
     script.
-        console.log('here')
 
+        window.addEventListener('resize', setVD, false)
         depp.require([''], function() {
             console.log('ready')
 
