--- a/tut/shows/one/index.pug
+++ b/tut/shows/one/index.pug
@@ -8,7 +8,7 @@ body
         p what
         // http://dinbror.dk/blog/how-to-preload-entire-html5-video-before-play-solved/
         .video_container
-            video#vid1( autoplay preload-'auto' loop muted)
+            video#vid1.vid( autoplay preload-'auto' loop muted)
                 source(src='arc.mp4' type="video/mp4" )
             
         p now
@@ -21,50 +21,6 @@ body
             width: 100%; 
         }
 
-        .gutter {
-            background-color: #eee;
-            background-repeat: no-repeat;
-            background-position: 50%;
-        }
-        .gutter.gutter-horizontal {
-            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
-            cursor: col-resize;
-        }
-        .gutter.gutter-vertical {
-            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
-            cursor: row-resize;
-        }
-        .split {
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-
-            overflow-y: auto;
-            overflow-x: hidden;
-            background-color: #fff;
-        }
-        .split, .gutter.gutter-horizontal {
-            float: left;
-            height: 360px;
-        }
-        .gutter.gutter-horizontal {
-            cursor: ew-resize;
-        }
-
-        .video_container {
-            display: flex;
-            
-            height: calc(100% - 100px);
-            width:  calc(100% - 200px);
-            background: #edeae8;
-            border: 3px solid #73AD21;
-
-        }
-        #vid1 {
-            overflow: hidden;
-            flex: 1;
-            object-fit: contain;
-        }
 
     script.
         
