--- a/tut/shows/one/index.pug
+++ b/tut/shows/one/index.pug
@@ -1,18 +1,21 @@
 head
     include /layout/headFrag
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.0/src/css/min.min.css')
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.1/src/css/min.min.css')
 
 body
 
-    #left.split
-        p what
-        // http://dinbror.dk/blog/how-to-preload-entire-html5-video-before-play-solved/
-        .video_container
-            video#vid1.vid( autoplay preload-'auto' loop muted)
-                source(src='arc.mp4' type="video/mp4" )
-            
-        p now
-    #right.split
+    .epis
+
+        #left.split
+            p what
+
+            // http://dinbror.dk/blog/how-to-preload-entire-html5-video-before-play-solved/
+            .video_container
+                video#vid1.vid( autoplay preload='auto' loop muted controls controlsList="nodownload" )
+                    source(src='arc.mp4' type="video/mp4" )
+                
+            p now
+        #right.split
 
     style.
         * { margin: 0; padding: 0; }
@@ -21,12 +24,22 @@ body
             width: 100%; 
         }
 
+        .video_container {
+            height:  calc(100% - 100px);
+            
+            border:  3px solid yellow;
+        }
+
 
     script.
         
-        depp.require(['split'], function() {
+        depp.require(['split','DOM'], function() {
             console.log('ready')
-            Split(['#left', '#right'])
+            
+            var sp = Split( [document.querySelector('#left'), document.querySelector('#right')] , {
+               sizes: [90, 10],
+               minSize: 200
+            })
+            console.log(sp.getSizes())
 
-
-        })//req
+        })//depp
