--- a/tut/index.pug
+++ b/tut/index.pug
@@ -1,19 +1,9 @@
 head
-    include layout/headFrag
+
 body
-    p
-    .container
-        p oh hi
+    p red
+
 
 
     script.
-        //toolBeltDefault()
-        
-        console.log( getStyle(document.getElementsByTagName("BODY")[0], 'line-height') )
-
-        console.log('here')
-
-        depp.require(['jquery','baseliner'], function() {
-            console.log('ready')
-            baseliner = new Baseliner({gridHeight:19, gridColor: 'red'})
-        })
+    
