--- a/tut/layout/custels/epislist/index.pug
+++ b/tut/layout/custels/epislist/index.pug
@@ -6,12 +6,88 @@ body
     p oh hi
 
 
+    button.btn.btn-a Previous 
+
+    #custLst
+        ul.paginationTop
+
+        input.search.smooth(placeholder="Search")
+        hr
+        table.table
+            thead
+            tr
+                th Elements
+            tbody.list
+        
+        ul.paginationBot
+
+    button.btn.btn-a Next 
+    
+
 
 style.
-    
+    .pagination li {
+        display:inline-block;
+        padding:5px;
+    }
 
 script.
     toolBeltDefault()
     depp.require(['listjs'], function() {
         console.log('ready')
+        var dat = [
+            {name: 'oh hi1', desc: 'there'},
+            {name: 'oh hi2', desc: 'there'},
+            {name: 'oh hi3', desc: 'there'},
+            {name: 'oh hi4', desc: 'there'},
+            {name: 'oh hi5', desc: 'there'},
+            {name: 'oh hi6', desc: 'there'},
+            {name: 'oh hi7', desc: 'there'},
+            {name: 'oh hi8', desc: 'there'},
+            {name: 'oh hi9', desc: 'there'},
+            {name: 'oh hi10', desc: 'there'},
+            {name: 'oh hi11', desc: 'there'},
+            {name: 'oh hi12', desc: 'there'},
+            {name: 'oh hi1', desc: 'there'},
+            {name: 'oh hi2', desc: 'there'},
+            {name: 'oh hi3', desc: 'there'},
+            {name: 'oh hi4', desc: 'there'},
+            {name: 'oh hi5', desc: 'there'},
+            {name: 'oh hi6', desc: 'there'},
+            {name: 'oh hi7', desc: 'there'},
+            {name: 'oh hi8', desc: 'there'},
+            {name: 'oh hi9', desc: 'there'},
+            {name: 'oh hi10', desc: 'there'},
+            {name: 'oh hi11', desc: 'there'},
+            {name: 'oh hi12', desc: 'there'},
+        ]
+
+        onData(dat)
     })
+
+    function onData(data) {
+        var options = {
+            valueNames: [ 'desc', 'name', {data: ['name']} ],
+            item: `<tr data-name> 
+                     <td class="name"></td>
+                     <td class="desc"></td>
+                   </tr>`,
+            page: 3,
+            pagination: true,
+            pagination: [{
+                name: "paginationTop",
+                paginationClass: "paginationTop",
+                innerWindow: 1,
+                left: 2
+            }, {
+                paginationClass: "paginationBot",
+                innerWindow: 1,
+                right: 2
+            }]
+       
+            }
+
+        var custListEl = document.getElementById('custLst')
+
+        var custelList = new List(custListEl, options, data)
+    }//()
