--- a/tut/layout/custels/epislist/index.html
+++ b/tut/layout/custels/epislist/index.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <script src="https://cdn.jsdelivr.net/npm/johnnydepp@0.1.0/dist/depp.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/intuition-dev/toolBelt@v1.9.20/src/toolBelt.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/intuition-dev/toolBelt@v1.9.20/src/toolBelt.js"></script>
   <style>
     html { touch-action: manipulation; }
     .delayShowing { opacity: 0; }
@@ -34,43 +34,40 @@
     <ul class="paginationBot"></ul>
   </div>
   <button class="btn btn-a">Next </button>
-<!-- mB v6.09.18 on 2019-09-23T02:48:54.290Z --></body>
+<!-- mB v6.09.18 on 2019-09-23T03:34:51.143Z --></body>
 <style>
-  .pagination li {
+  .paginationTop li, .paginationBot li {
       display:inline-block;
       padding:5px;
   }
   
 </style>
 <script>
-  toolBeltDefault()
-  depp.require(['listjs'], function() {
+  //toolBeltDefault()
+  
+  depp.require(['listjs', 'jquery', 'DOM', 'poly'], function() {
       console.log('ready')
       var dat = [
-          {name: 'oh hi1', desc: 'there'},
-          {name: 'oh hi2', desc: 'there'},
-          {name: 'oh hi3', desc: 'there'},
-          {name: 'oh hi4', desc: 'there'},
-          {name: 'oh hi5', desc: 'there'},
-          {name: 'oh hi6', desc: 'there'},
-          {name: 'oh hi7', desc: 'there'},
-          {name: 'oh hi8', desc: 'there'},
-          {name: 'oh hi9', desc: 'there'},
-          {name: 'oh hi10', desc: 'there'},
-          {name: 'oh hi11', desc: 'there'},
-          {name: 'oh hi12', desc: 'there'},
-          {name: 'oh hi1', desc: 'there'},
-          {name: 'oh hi2', desc: 'there'},
-          {name: 'oh hi3', desc: 'there'},
-          {name: 'oh hi4', desc: 'there'},
-          {name: 'oh hi5', desc: 'there'},
-          {name: 'oh hi6', desc: 'there'},
-          {name: 'oh hi7', desc: 'there'},
-          {name: 'oh hi8', desc: 'there'},
-          {name: 'oh hi9', desc: 'there'},
-          {name: 'oh hi10', desc: 'there'},
-          {name: 'oh hi11', desc: 'there'},
-          {name: 'oh hi12', desc: 'there'},
+          {name: 'oh hi1', desc: '1there'},
+          {name: 'oh hi2', desc: '2there'},
+          {name: 'oh hi3', desc: '3there'},
+          {name: 'oh hi4', desc: '4there'},
+          {name: 'oh hi5', desc: '5there'},
+          {name: 'oh hi6', desc: '6there'},
+          {name: 'oh hi7', desc: '7there'},
+          {name: 'oh hi8', desc: '8there'},
+          {name: 'oh hi9', desc: '9there'},
+          {name: 'oh hi10', desc: '10there'},
+          {name: 'oh hi11', desc: '11there'},
+          {name: 'oh hi12', desc: '12there'},
+          {name: 'oh hi13', desc: '13there'},
+          {name: 'oh hi14', desc: '14there'},
+          {name: 'oh hi15', desc: '15there'},
+          {name: 'oh hi16', desc: '16there'},
+          {name: 'oh hi17', desc: '17there'},
+          {name: 'oh hi18', desc: '18there'},
+          {name: 'oh hi19', desc: '19there'},
+          
       ]
   
       onData(dat)
@@ -78,28 +75,28 @@
   
   function onData(data) {
       var options = {
-          valueNames: [ 'desc', 'name', {data: ['name']} ],
-          item: `<tr data-name> 
+          valueNames: [ 'desc', 'name', {data: ['nameKK']} ],
+          item: `<tr data-nameKK> 
                    <td class="name"></td>
                    <td class="desc"></td>
                  </tr>`,
           page: 3,
-          pagination: true,
           pagination: [{
               name: "paginationTop",
               paginationClass: "paginationTop",
-              innerWindow: 1,
-              left: 2
-          }, {
+        
+           }, {
               paginationClass: "paginationBot",
               innerWindow: 1,
+              left: 0,
               right: 2
           }]
      
-          }
+          } // options
   
       var custListEl = document.getElementById('custLst')
   
       var custelList = new List(custListEl, options, data)
+  
   }//()
 </script>
