--- a/tut/layout/custels/epislist/index.pug
+++ b/tut/layout/custels/epislist/index.pug
@@ -5,35 +5,45 @@ head
 body
     p oh hi
 
-    button.btn.btn-a Previous 
+    button#prev.btn.btn-a Previous 
 
-    #custLst
-        ul.paginationTop
+    #data-container
+    #pagination-container
 
-        input.search.smooth(placeholder="Search")
-        hr
-        table.table
-            thead
-            tr
-                th Elements
-            tbody.list
-        
-        ul.paginationBot
-
-    button.btn.btn-a Next 
+    button#next.btn.btn-a Next 
     
 
 style.
-    .paginationTop li, .paginationBot li {
-        display:inline-block;
-        padding:5px;
-    }
+  
 
 script.
     //toolBeltDefault()
 
-    depp.require(['listjs', 'jquery', 'DOM', 'poly'], function() {
+    function template(data) {
+
+        var html = '<ul>';
+        $.each(data, function(index, item){
+            html += '<li>'+ item +'</li>';
+        });
+        html += '</ul>';
+        return html;
+
+    }
+
+    depp.require(['jquery', 'pagination', 'mustache', 'poly'], function() {
         console.log('ready')
+
+        document.getElementById("prev").addEventListener("click", function(){
+                console.log('P')
+                $('#pagination-container').pagination('previous')
+            })
+
+        document.getElementById("next").addEventListener("click", function(){
+            console.log('N')
+            $('#pagination-container').pagination('next')
+        })
+        
+  
         var dat = [
             {name: 'oh hi1', desc: '1there'},
             {name: 'oh hi2', desc: '2there'},
@@ -53,36 +63,30 @@ script.
             {name: 'oh hi16', desc: '16there'},
             {name: 'oh hi17', desc: '17there'},
             {name: 'oh hi18', desc: '18there'},
-            {name: 'oh hi19', desc: '19there'},
-            
+            {name: 'oh hi19', desc: '19there'}
         ]
 
         onData(dat)
     })
 
+
     function onData(data) {
-        var options = {
-            valueNames: [ 'desc', 'name', {data: ['nameKK']} ],
-            item: `<tr data-nameKK> 
-                     <td class="name"></td>
-                     <td class="desc"></td>
-                   </tr>`,
-            page: 3,
-            pagination: [{
-                name: "paginationTop",
-                paginationClass: "paginationTop",
-          
-             }, {
-                paginationClass: "paginationBot",
-                innerWindow: 1,
-                left: 0,
-                right: 2
-            }]
-       
-            } // options
+        console.log('data')
+        $('#pagination-container').pagination({
 
-        var custListEl = document.getElementById('custLst')
+            pageSize: 3,
+            showPageNumbers: false,
+            showPrevious: false,
+            showNext: false,
 
-        var custelList = new List(custListEl, options, data)
+            dataSource: [1, 2, 3, 4, 5, 6, 7, 195],
+
+            callback: function(data, pagination) { // on page
+                console.log('pg')
+                // template method of yourself
+                var html = template(data);
+                $('#data-container').html(html);
+            }
+        })
 
     }//()
