--- a/tut/layout/custels/epislist/index.html
+++ b/tut/layout/custels/epislist/index.html
@@ -23,7 +23,7 @@
   <div id="data-container"></div>
   <div id="pagination-container"></div>
   <button class="btn btn-a" id="next">Next </button>
-<!-- mB v6.09.18 on 2019-09-23T14:27:00.013Z --></body>
+<!-- mB v6.09.18 on 2019-09-23T15:38:13.899Z --></body>
 <style></style>
 <script>
   //toolBeltDefault()
@@ -88,15 +88,27 @@
           showPrevious: false,
           showNext: false,
   
-          dataSource: [1, 2, 3, 4, 5, 6, 7, 195],
+          dataSource: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 195],
   
           callback: function(data, pagination) { // on page
-              console.log('pg')
-              // template method of yourself
+  
+              console.log(pagination.pageNumber, pagination.totalNumber)
+  
+              // template method 
               var html = template(data);
               $('#data-container').html(html);
-          }
+              console.log('pg')
+              setTimeout(showHide,50)
+          }//cb
       })
   
   }//()
+  
+  function showHide() {
+      console.log('sh')
+      
+      var cur = $('#pagination-container').pagination('getSelectedPageNum')
+      var tot = $('#pagination-container').pagination('getTotalPage')
+      console.log(cur,tot)
+  }
 </script>
