--- a/tut/layout/custels/epislist/index.pug
+++ b/tut/layout/custels/epislist/index.pug
@@ -79,14 +79,26 @@ script.
             showPrevious: false,
             showNext: false,
 
-            dataSource: [1, 2, 3, 4, 5, 6, 7, 195],
+            dataSource: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 195],
 
             callback: function(data, pagination) { // on page
-                console.log('pg')
-                // template method of yourself
+
+                console.log(pagination.pageNumber, pagination.totalNumber)
+
+                // template method 
                 var html = template(data);
                 $('#data-container').html(html);
-            }
+                console.log('pg')
+                setTimeout(showHide,50)
+            }//cb
         })
 
     }//()
+
+    function showHide() {
+        console.log('sh')
+        
+        var cur = $('#pagination-container').pagination('getSelectedPageNum')
+        var tot = $('#pagination-container').pagination('getTotalPage')
+        console.log(cur,tot)
+    }
