--- a/tut/layout/custels/fraglist/index.pug
+++ b/tut/layout/custels/fraglist/index.pug
@@ -17,12 +17,11 @@ style.
 
     .butOn {
         font-weight: normal;
-        plointer-events: auto;
-
+        pointer-events: auto;
     }
     .butOff {
         font-weight: lighter;
-        plointer-events: none;
+        pointer-events: none;
    }
 
 script.
@@ -78,7 +77,6 @@ script.
         onData(dat)
     })
 
-
     function onData(data) {
         console.log('data')
         $('#pagination-container').pagination({
@@ -88,12 +86,14 @@ script.
             showPrevious: false,
             showNext: false,
 
-            dataSource: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 195],
+            dataSource: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11],
 
             callback: function(data, pagination) { // on page
                 console.log('pg')
                 //pg, sz, tot
-                showHide(pagination.pageNumber, pagination.pageSize, pagination.totalNumber)
+                setTimeout(function(){
+                    showHide(pagination.pageNumber, pagination.pageSize, pagination.totalNumber)
+                },1)
 
                 // template method 
                 var html = template(data)
@@ -108,7 +108,9 @@ script.
         if(pg==1)  { but('prev', false ) }
             else but('prev', true) 
 
-        if(pg * sz < (tot - sz)) { // more 
+        var cur = pg * sz
+        console.log(cur, tot)
+        if(cur < tot) { // more 
             but('next', true) 
         } else { // to much
             but('next', false) 
@@ -116,12 +118,10 @@ script.
     }
 
     function but(id, on) {
-
         console.log(id,on)
-
         $b = $('#'+id)
-        $b.prop('disabled', on)
-    
+        $b.prop('disabled', !on)
+
         if(on) {
             $b.removeClass( "classless" )
             $b.removeClass( "butOff" )
@@ -134,5 +134,4 @@ script.
             $b.addClass(    "classless" )
             $b.addClass(    "butOff" )
         }
-
     }//()
